kubernetes/deployment.yaml
---
apiVersion: v1
kind: List
items:
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: collectlogs
    labels:
      app: collectlogs
  spec:
    selector:
      matchLabels:
        app: collectlogs
    template:
      metadata:
        labels:
          app: collectlogs
      spec:
        serviceAccountName: collectlogs
        containers:
        - image: quay.io/chmouel/collectlogs-operator
          name: operator
          volumeMounts:
          - mountPath: /data
            name: data
        - image: quay.io/chmouel/collectlogs-frontend
          name: frontend
          volumeMounts:
          - mountPath: /data
            name: data
#        - image: quay.io/openshift/origin-cli:latest
#          name: cli
#          command: ['sleep', 'infinity']
        volumes:
        - emptyDir: {}
          name: data
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: collectlogs
    name: collectlogs
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: collectlogs
