kubernetes/openshift-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: collectlogs
spec:
  to:
    kind: Service
    name: collectlogs
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
